# react-native-list

./: .gitmodules  README.md  package.json  todo.md
example/: App.tsx  Demo.tsx  app.json  babel.config.js  index.ts  metro.config.js  package.json  tsconfig.json
example/renderer/: RendererProxyThreadSwitch.js
example/src/: ExamplePicker.tsx  ExamplesApp.tsx  components.tsx  styles.ts  types.ts
example/src/examples/: ChatBenchmarkExample.tsx  DynamicTextHeightsExample.tsx  LegendListChatBenchmarkExample.tsx  ListUpdateLabExample.tsx  chatBenchmarkData.ts
package/: NitroList.podspec  README.md  ReactNativeList.podspec  app.json  bundle.ts  metro-config.d.ts  metro-config.js  nitro.json  package.json  react-submodule-resolve-plugin.ts  strip-flow-plugin.js  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/src/main/cpp/: HybridUiManagerHelper.cpp  JHybridUiListModule.cpp  JHybridUiListModule.h  JSIConverter+UIManagerBinding.hpp  cpp-adapter.cpp
package/android/src/main/java/com/hannojg/reactnativelist/: ReactNativeListPackage.kt
package/android/src/main/java/com/margelo/nitro/nitrolist/: HybridAdapter.kt  HybridAdapterFactory.kt  HybridUiListModule.kt  HybridUiListView.kt  HybridViewHolder.kt  NitroListPackage.kt
package/android/src/main/java/com/margelo/nitro/reactnativelist/: HybridAdapter.kt  HybridAdapterFactory.kt  HybridNativeListDataSource.kt  HybridNativeListLayout.kt  HybridUiListModule.kt  HybridUiListView.kt  HybridViewHolder.kt  NativeListAdapter.kt
package/cpp/: HybridUiManagerHelper.cpp  HybridUiManagerHelper.hpp  JSIConverter+ShadowNodeList.hpp  WorkletsUiCallInvoker.cpp  WorkletsUiCallInvoker.hpp
package/ios/DataSource/: HybridNativeListDataSource.swift
package/ios/HybridObjects/: HybridIOSWorkletsModuleProxyHolder.swift  HybridUiListModule.swift  HybridUiListSurfacePresenterRegistry.h  HybridUiListSurfacePresenterRegistry.m  HybridUiListTurboModuleInstaller.h  HybridUiListTurboModuleInstaller.mm  HybridViewHolder.swift
package/ios/Layout/: HybridNativeListLayout.swift
package/ios/Utils/: ErrorUtils.h  SurfaceHelper.h  SurfaceHelper.mm  SurfacePresenterRegistry.h  SurfacePresenterRegistry.m  TurboModuleInstaller.h  TurboModuleInstaller.mm
package/ios/Views/: HostCell.swift  HybridUiListView.swift
package/metro/: RendererProxyThreadSwitch.js
package/react-bundler/: README.md  bundle.ts  react-submodule-resolve-plugin.ts  strip-flow-plugin.ts
package/shims/: react-current-fiber.js  react-fiber-config-fabric.js  react-work-tags.js
package/src/: ListDataSource.ts  ListLayout.ts  ReactFabricMirror.bundle.js  ReactFabricMirror.js  UiList.ts  UiListModule.ts  UiManagerHelper.ts  index.tsx  privateGlobals.ts
package/src/hooks/: useChangeEffect.ts
package/src/renderer/fabric/: RenderHelper.ts  UiManagerHelper.ts
package/src/renderer/react/: ReactFabricMirror.bundle.js  ReactFabricMirror.ts  ReactFabricRenderer.ts
package/src/specs/: Adapter.nitro.ts  IOSWorkletsModuleProxyHolder.nitro.ts  NativeLinearListLayout.nitro.ts  NativeListDataSource.nitro.ts  NativeListLayout.nitro.ts  UIListModule.nitro.ts  UIManagerHelper.nitro.ts  UiListView.nitro.ts  ViewHolder.nitro.ts
package/src/views/: List.tsx  UiListHostComponent.ts
patches/: @expo%2Fmetro-config@55.0.18.patch  @expo%2Fmetro-config@55.0.3.patch  metro-runtime@0.83.7.patch  metro@0.83.3.patch  metro@0.83.7.patch  react-native-worklets@0.8.0-bundle-mode-preview-1.patch  react-native-worklets@0.8.1.patch  react-native-worklets@0.9.1.patch  react-native@0.83.1.patch
